# GracefulTooling

./: .gitignore  CMakeLists.txt  ReadMe.md  imgui.ini
libraries/source/imgui/: CMakeLists.txt
libraries/source/imgui-sfml/: CMakeLists.txt
src/: application.cpp  application.h  color_definitions.h  graceful_graph.h  graph_labeling_utilites.cpp  graph_labeling_utilities.h  gui_graph.cpp  gui_graph.h  main.cpp  platform_configuration.h  utilities.cpp  utilities.h
